crates/macros/tests/ui/fail/missing_fittings_error.rs
#[fittings::service]
trait MissingFittingsErrorService {
    async fn hello(&self, params: ()) -> Result<(), String>;
}

fn main() {}
